--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "npm build && surge -p dist --domain llms.surge.sh"
   },
   "dependencies": {
     "element-ui": "^2.2.1",
