--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "deploy": "npm build && surge -p dist --domain llms.surge.sh"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "element-ui": "^2.2.1",
+    "es6-promise": "^4.2.4",
+    "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
